--- a/styles/.atom-text-editor.less
+++ b/styles/.atom-text-editor.less
@@ -28,6 +28,11 @@
         transform: translate(0, 0);
         z-index: 11;
     }
+
+    .tab & {
+        transform: translate(0, 0);
+        z-index: 1;
+    }
 }
 
 @import "beacon.less";
